[package]
name = "coop"
version = "0.1.0"
edition = "2021"
authors =["Peter Kehl <peter.kehl@gmail.com>"]
description = "Reserved. Cooperation for **safe** applications & libraries."
license = "MIT OR Apache-2.0"
repository = "https://github.com/coop-rs/coop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
